# SceneParser

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
examples/: CMakeLists.txt  Camera.qml  Geometry.qml  GroupView.qml  Light.qml  Material.qml  PropertyLabel.qml  SceneModel.cpp  SceneModel.hpp  ex1.scene  examples.qrc  main.cpp  main.qml
include/: ISceneGenerator.hpp  Property.hpp  SceneParser.hpp  Tokenizer.hpp  Types.hpp
src/: PrivTypes.hpp  Property.hpp  SceneParser.cpp  Tokenizer.cpp  Tokenizer.hpp
test/: CMakeLists.txt  tst_parser.cpp  tst_tokenizer.cpp  tst_types.cpp
